# wyckoff-ai

./: .gitignore  LICENSE  PROJECT_SUMMARY.md  README.md  env.example  pyproject.toml  requirements.txt  wyckoff.example.toml
.github/workflows/: tests.yml
examples/: backtest_example.py
tests/: README.md  __init__.py  conftest.py
tests/data/: .gitkeep
tests/integration/: __init__.py  test_pipeline.py
tests/regression/: __init__.py  test_snapshots.py
tests/snapshots/: .gitkeep  analysis_schema.json  event_detection.json  feature_columns.json  feature_statistics.json  market_structure.json
tests/unit/: __init__.py  test_backtest.py  test_features.py  test_rules.py  test_state_machine.py
wyckoff_ai/: __init__.py  cli.py  config.py  exceptions.py  features.py  logging.py  mtf.py  regime.py  schemas.py
wyckoff_ai/api/: __init__.py  main.py  schemas.py
wyckoff_ai/api/routes/: analysis.py  backtest.py
wyckoff_ai/backtest/: __init__.py  engine.py  event_eval.py  metrics.py  report.py
wyckoff_ai/chains/: pipeline.py
wyckoff_ai/data/: binance.py
wyckoff_ai/report/: render.py
wyckoff_ai/visualization/: __init__.py  candlestick.py  report_charts.py  state_diagram.py
wyckoff_ai/web/: __init__.py  api.py  app.py  models.py
wyckoff_ai/web/static/css/: style.css
wyckoff_ai/web/static/js/: app.js
wyckoff_ai/web/templates/: chart.html  index.html
wyckoff_ai/wyckoff/: __init__.py  context.py  rules.py  scenario_engine.py  sequence.py  state_machine.py  volume_analysis.py
