[tool.poetry]
name = "wyckoff-ai"
version = "0.1.0"
description = "威科夫 K 线分析工具（LangChain 编排版）：Binance OHLCV -> 特征 -> 规则识别 -> 中文报告"
readme = "README.md"
packages = [{ include = "wyckoff_ai" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pandas = "2.2.3"
numpy = "2.1.3"
pydantic = "2.10.6"
python-dotenv = "1.0.1"
langchain-core = "0.3.28"
langchain-openai = "0.2.12"
rich = "13.9.4"
pydantic-settings = "^2.12.0"
plotly = "^6.5.1"
kaleido = "^1.2.0"
fastapi = "^0.128.0"
uvicorn = {extras = ["standard"], version = "^0.40.0"}
jinja2 = "^3.1.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.0"
pytest-mock = "^3.12.0"
hypothesis = "^6.92.0"

[tool.poetry.scripts]
wyckoff-ai = "wyckoff_ai.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (may require external services)",
    "regression: Regression tests (snapshot comparison)",
    "slow: Slow tests (skip with -m 'not slow')",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["wyckoff_ai"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"


